doc: #8 update example project for selectable parameter

--- a/example/src/app/app.component.html
+++ b/example/src/app/app.component.html
@@ -5,6 +5,11 @@
   </h1>
 </div>
 
+<div>
+  <button (click)="addNode()">Add</button>
+  <button (click)="removeNode()">Remove</button>
+</div>
+
 <div id="jsmind_container"></div>
 
 
